--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.fedorahosted.freeotp"
     android:versionCode="17"
-    android:versionName="1.5" >
+    android:versionName="0.1" >
 
     <uses-sdk
         android:minSdkVersion="23"
@@ -43,20 +43,22 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/ic_freeotp"
+        android:icon="@mipmap/ic_arbi_logo_round"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <!--"@android:style/Theme.Holo.Light.Dialog.NoActionBar"-->
         <activity
             android:name=".AboutActivity"
-            android:theme="@android:style/Theme.Holo.Light.Dialog.NoActionBar"
-            />
+            android:theme= "@android:style/Theme.DeviceDefault.Dialog"
+        />
 
         <activity
             android:name=".add.ScanActivity"
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
             />
 
+        <!--android:theme="@android:style/Theme.Holo.Light.Dialog"-->
         <activity
             android:name=".edit.DeleteActivity"
             android:label="@string/delete_question"
